--- a/report.tex
+++ b/report.tex
@@ -303,8 +303,20 @@
 
 \section*{United States of America}
 
+\hypertarget{understanding-the-trend}{%
+\subsection{Understanding the trend}\label{understanding-the-trend}}
+
+\begin{figure}[H]
+\includegraphics[width=1\linewidth,]{report_files/figure-latex/plot1-1} \caption{Flow of goods}\label{fig:plot1}
+\end{figure}
+
+From \ref{fig:plot1} It is obvious that cars are the most traded goods. Even though USA has its own In-house production unit for car brands like Jeep, Ford and Chevrolet it still seems to import a lot of cars at a value of almost 100 billion. Followed by Pharmaceutical products and rubber contributing highly.
+
+Even though USA imports more than it exports, goods like Cotton, fruits and nuts, iron and steel the exports are higher than imports.
+
 \section*{Conclusion}
 
 \printbibliography
 
 \end{document}
+
