--- a/report.tex
+++ b/report.tex
@@ -299,6 +299,10 @@
 
 \section*{Germany}
 
+\begin{figure}[H]
+\includegraphics[width=1\linewidth,]{report_files/figure-latex/gtrade-1} \caption{Traded Goods in germany}\label{fig:gtrade}
+\end{figure}
+
 \section*{China}
 
 \section*{United States of America}
