--- a/report.tex
+++ b/report.tex
@@ -303,6 +303,23 @@
 \includegraphics[width=1\linewidth,]{report_files/figure-latex/gtrade-1} \caption{Traded Goods in germany}\label{fig:gtrade}
 \end{figure}
 
+\begin{table}[!h]
+
+\caption{\label{tab:germanytrend}Trend of Trade in Germany in USD for 3 years}
+\centering
+\begin{tabular}[t]{r|r}
+\hline
+Year & Mean\_Trade\\
+\hline
+2016 & 740559766\\
+\hline
+2017 & 826727733\\
+\hline
+2018 & 884902006\\
+\hline
+\end{tabular}
+\end{table}
+
 \section*{China}
 
 \section*{United States of America}
