Table of Traded Comodities in Germany

--- a/report.Rmd
+++ b/report.Rmd
@@ -94,76 +94,95 @@ final <- read.csv("data/team_nemo.csv")
 
 
 ```{r read_germany}
-germany <- final %>% filter(Country == "Germany")
-germany_import <- germany %>% filter(Flow == "Import")
-germany_export <- germany %>% filter(Flow == "Export")
+  germany <- final %>% filter(Country == "Germany")
+  germany_import <- germany %>% filter(Flow == "Import")
+  germany_export <- germany %>% filter(Flow == "Export")
 ```
 
 
 ```{r plot_germany}
-x<- germany%>% mutate(Trade = Trade/1000000000) %>%
-  filter(Category %in% c("cars", "pharma", "wheat", "tobacco", "sugar"))%>%
-     ggplot(aes(y = reorder(Category, Trade),
- x = Trade, fill = Flow)) +
- geom_col(position = "dodge") +
- facet_grid(~Year)+
-  scale_x_continuous(labels=scales::dollar_format())+
- scale_fill_brewer(palette = "Dark2") +
-  theme_bw()+
-  ylab("Trade in Billions")+
-  labs(title = "Export Oriented Goods")+
+  x<- germany%>% mutate(Trade = Trade/1000000000) %>%
+    filter(Category %in% c("cars", "pharma", "wheat", "tobacco", "sugar"))%>%
+    ggplot(aes(y = reorder(Category, Trade),
+               x = Trade, fill = Flow)) +
+    
+    geom_col(position = "dodge") +
+    facet_grid(~Year)+
+    scale_x_continuous(labels=scales::dollar_format())+
+    scale_fill_brewer(palette = "Dark2") +
+    
+    theme_bw()+
+    ylab("Trade in Billions")+
+    labs(title = "Export Oriented Goods")+
     theme(axis.title.y=element_blank())
-
-y<- germany %>% mutate(Trade = Trade/1000000000) %>% 
-  filter(Category %in% c("rubber", "iron_steel", "fruits_nuts", "coffee", "cotton"))%>%
-   ggplot(aes(y = reorder(Category, Trade),
- x = Trade, fill = Flow)) +
- geom_col(position = "dodge") +
- facet_grid(~Year)+
-  scale_x_continuous(labels=scales::dollar_format())+
- scale_fill_brewer(palette = "Dark2")+
-  theme_bw()+
-  ylab("Trade in Billions")+
-  labs(title = "Import Oriented Goods")+
+  
+  
+  y<- germany %>% mutate(Trade = Trade/1000000000) %>% 
+    filter(Category %in% c("rubber", "iron_steel", "fruits_nuts", "coffee", "cotton"))%>%
+    ggplot(aes(y = reorder(Category, Trade),
+               x = Trade, fill = Flow)) +
+    
+    geom_col(position = "dodge") +
+    facet_grid(~Year)+
+    scale_x_continuous(labels=scales::dollar_format())+
+    scale_fill_brewer(palette = "Dark2")+
+    
+    theme_bw()+
+    ylab("Trade in Billions")+
+    labs(title = "Import Oriented Goods")+
     theme(axis.title.y=element_blank())
 ```
 
 
 ```{r gtrade, fig.cap = "Traded Goods in germany", out.width="100%", fig.show="hold", out.width="100%"}
 
-ggarrange(x, y, legend = "top", common.legend = TRUE,
-          ncol =1, nrow = 2)
+  ggarrange(x, y, legend = "top", 
+            common.legend = TRUE,
+            ncol =1, nrow = 2)
 
 ```
 
 
 ```{r germanytrend}
 
-itrade_val <- germany_import %>% rename("Import_Value"= Trade, 
-                                        "Import"= Flow)
+  itrade_val <- germany_import %>% rename("Import_Value"= Trade, 
+                                          "Import"= Flow)
+  
+  etrade_val <- germany_export %>% rename("Export_Value"= Trade, 
+                                          "Export"= Flow)
 
-etrade_val <- germany_export %>% rename("Export_Value"= Trade, 
-                                        "Export"= Flow)
+  trade <- itrade_val %>% 
+    left_join(etrade_val, by=c("Year"="Year", 
+                              "Country"= "Country", 
+                              "Category"= "Category")) 
 
-trade <- itrade_val %>% 
-  left_join(etrade_val, by=c("Year"="Year", 
-                            "Country"= "Country", 
-                            "Category"= "Category")) 
-
-mean_tarde<- trade %>% 
-  group_by(Year)%>%
+  mean_tarde<- trade %>% 
+    group_by(Year)%>%
     summarise(Ex_Value= mean(Export_Value),
               Im_Value=mean(Import_Value)) %>%
-  mutate(Mean_Trade = Ex_Value + Im_Value) %>%
-  select(Year, Mean_Trade)
+    mutate(Mean_Trade = Ex_Value + Im_Value) %>%
+    select(Year, Mean_Trade)
 
 
  knitr::kable(mean_tarde, caption = "Trend of Trade in Germany in USD for 3 years") %>%
-    kable_styling (latex_options = c("hover", "hold_position")) 
+        kable_styling (latex_options = c("hover", "hold_position")) 
 
 ```
 
+```{r germanycomo}
+  
+  trend<- trade%>%
+    group_by(Category)%>%
+    summarise(Ex_Value= mean(Export_Value),
+              Im_Value= mean(Import_Value)) %>%
+    mutate(Trend = Ex_Value - Im_Value) %>%
+    arrange(-Trend)
 
+  knitr::kable(trend, caption = "Traded Comodities in Germany") %>%
+         kable_styling (latex_options = c("striped", "hold_position"))%>%
+         kable_classic()
+
+```
 
 \section*{China}
 
