--- a/report.tex
+++ b/report.tex
@@ -320,6 +320,37 @@ Year & Mean\_Trade\\
 \end{tabular}
 \end{table}
 
+\begin{table}[!h]
+
+\caption{\label{tab:germanycomo}Traded Comodities in Germany}
+\centering
+\begin{tabular}[t]{l|r|r|r}
+\hline
+Category & Ex\_Value & Im\_Value & Trend\\
+\hline
+\cellcolor{gray!6}{cars} & \cellcolor{gray!6}{3556599614} & \cellcolor{gray!6}{1659647794} & \cellcolor{gray!6}{1896951819.6}\\
+\hline
+pharma & 3096824046 & 2003959050 & 1092864996.5\\
+\hline
+\cellcolor{gray!6}{tobacco} & \cellcolor{gray!6}{502254364} & \cellcolor{gray!6}{271617658} & \cellcolor{gray!6}{230636705.9}\\
+\hline
+sugar & 161617581 & 113668563 & 47949018.2\\
+\hline
+\cellcolor{gray!6}{wheat} & \cellcolor{gray!6}{61969300} & \cellcolor{gray!6}{22357247} & \cellcolor{gray!6}{39612053.3}\\
+\hline
+rubber & 262819437 & 233275457 & 29543979.4\\
+\hline
+\cellcolor{gray!6}{cotton} & \cellcolor{gray!6}{7928467} & \cellcolor{gray!6}{8088379} & \cellcolor{gray!6}{-159911.7}\\
+\hline
+iron\_steel & 166290334 & 175106568 & -8816233.8\\
+\hline
+\cellcolor{gray!6}{coffee} & \cellcolor{gray!6}{112882680} & \cellcolor{gray!6}{153919437} & \cellcolor{gray!6}{-41036756.6}\\
+\hline
+fruits\_nuts & 42061094 & 215603589 & -173542495.7\\
+\hline
+\end{tabular}
+\end{table}
+
 \section*{China}
 
 \section*{United States of America}
