--- a/report.Rmd
+++ b/report.Rmd
@@ -92,15 +92,13 @@ final <- read.csv("data/team_nemo.csv")
 
 \section*{Germany}
 
+Germany is the most powerful economy of Europe with the biggest export commodities as automobiles and medicament. Besides, we all are aware of the fact that Germany exports a large number of automobiles and their parts to different countries. But did you know that for Germany, the import of automobiles also plays an important role in its trade markets? This can be seen through the below graph:
 
-```{r read_germany}
+```{r germany}
   germany <- final %>% filter(Country == "Germany")
   germany_import <- germany %>% filter(Flow == "Import")
   germany_export <- germany %>% filter(Flow == "Export")
-```
 
-
-```{r plot_germany}
   x<- germany%>% mutate(Trade = Trade/1000000000) %>%
     filter(Category %in% c("cars", "pharma", "wheat", "tobacco", "sugar"))%>%
     ggplot(aes(y = reorder(Category, Trade),
@@ -112,7 +110,7 @@ final <- read.csv("data/team_nemo.csv")
     scale_fill_brewer(palette = "Dark2") +
     
     theme_bw()+
-    ylab("Trade in Billions")+
+    xlab("Trade in Billions")+
     labs(title = "Export Oriented Goods")+
     theme(axis.title.y=element_blank())
   
@@ -128,19 +126,24 @@ final <- read.csv("data/team_nemo.csv")
     scale_fill_brewer(palette = "Dark2")+
     
     theme_bw()+
-    ylab("Trade in Billions")+
+    xlab("Trade in Billions")+
     labs(title = "Import Oriented Goods")+
     theme(axis.title.y=element_blank())
 ```
 
 
-```{r gtrade, fig.cap = "Traded Goods in germany", out.width="100%", fig.show="hold", out.width="100%"}
+```{r gtrade, fig.cap = "Traded Goods in Germany", out.width="100%", fig.show="hold", out.width="100%"}
 
   ggarrange(x, y, legend = "top", 
             common.legend = TRUE,
             ncol =1, nrow = 2)
 
 ```
+The first section of figure \@ref(fig:gtrade) shows the Export-oriented trading goods of Germany where one can see that the Automobiles sector indeed has more Export value than any other sector taken into consideration followed by Pharmaceuticals and Tobacco goods. The export values of these commodities have seen quite a significant rise in their export values. Besides this, Wheat had a slightly negligible import in the year 2016, however, its value saw an increase over the period. 
+
+
+Talking about import, the next section of the same figure (figure \@ref(fig:gtrade))  displays a brief insight on the Import oriented trading commodities in Germany. Rubber out-stands every import dominant goods are taken into the study with almost about similar export value. Similarly, for iron and steel, we notice a minor difference in their trade values. Next in the line is Coffee with the 2nd highest Import value and sort of remains parallel over the span. Fruits & Nuts and Coffee are atypical commodity with their Import value soaring much higher than their Exports.
+
 
 
 ```{r germanytrend}
@@ -169,6 +172,9 @@ final <- read.csv("data/team_nemo.csv")
 
 ```
 
+Table \@ref(tab:germanytrend) shows the mean value by Year of all the commodities traded in Germany. The table displays that the Trade value (Export value and Import Value) for 2016 is about 700 million USD. This increases by about 100 million more in the year 2017. And for 2018, it is nearly about 900 million USD. Hence the trade over these years has seen quite a bit increase. 
+
+
 ```{r germanycomo}
   
   trend<- trade%>%
@@ -183,6 +189,10 @@ final <- read.csv("data/team_nemo.csv")
          kable_classic()
 
 ```
+
+From table \@ref(tab:germanycomo) can be observed, net trading can be observed in the table. Where there are more exports (positive values) than Imports (negative values) making this a largely export-oriented country. Automobiles and Medicament contributing the most while Coffee and Iron & Steel contributing very less. Fruits and Nuts rank the lowest as it's imported in much higher value than what it is being exported.
+From the table, cars are exported at the highest rate of 1.89 Billion and cotton is imported the most.
+
 
 \section*{China}
 
