--- a/report.tex
+++ b/report.tex
@@ -301,6 +301,41 @@
 
 \section*{China}
 
+\hypertarget{the-trades-of-china}{%
+\section{The trades of China}\label{the-trades-of-china}}
+
+It is reported from Wikipedia(2020) that China has become the world's largest economy by GDP. Due to the rapid growth of China's economy, Chinese trade has expanded at a breakneck pace. This section will concentrate on the analysis of China's performance on world's major varieties of trade.
+
+\hypertarget{import-trades-of-china-from-2016-to-2018}{%
+\subsection{Import Trades of China from 2016 to 2018}\label{import-trades-of-china-from-2016-to-2018}}
+
+\begin{figure}[H]
+\includegraphics[width=1\linewidth,]{report_files/figure-latex/Yuweiplot1-1} \caption{Important Import Trade of China From 2016 to 2018}\label{fig:Yuweiplot1}
+\end{figure}
+
+From the Figure \ref{fig:Yuweiplot1}, it could be concluded that cars, pharma, iron\_steel and rubber are the top four categories that China imported from 2016 to 2018. At the same time, coffee, wheat, sugar and tobacco are not so prosperous among China's import trades. It is worth noting that the total volumes of cars' trades in each year are much higher than that of the second place. When look at the right part of the Figure \ref{fig:Yuweiplot1}, the trade tendencies of the most categories are going smoothly or upward, except for rubber.
+
+\hypertarget{export-trades-of-china-from-2016-to-2018}{%
+\subsection{Export trades of China from 2016 to 2018}\label{export-trades-of-china-from-2016-to-2018}}
+
+\begin{figure}[H]
+\includegraphics[width=1\linewidth,]{report_files/figure-latex/Yuweiplot2-1} \caption{ Important Export Trade of China From 2016 to 2018}\label{fig:Yuweiplot2}
+\end{figure}
+
+Figure \ref{fig:Yuweiplot2} shows the important export trades of China from 2016 to 2018. It could be seen that cars, iron\_steel, rubber and cotton are the top four categories that China exported from 2016 to 2018. At the same time, wheat, tobacco, sugar and coffee are not that popular among China's export trades. It is interesting to see cars, iron\_steel and rubber are also appear in the top four of export trade. And cotton took pharma's place in the export trades. The right part of the Figure \ref{fig:Yuweiplot2} demonstrates that the total volumes of all the ten categories in 2018 are higher than that of 2016 more or less.
+
+\hypertarget{balance-of-trade}{%
+\subsection{Balance of trade}\label{balance-of-trade}}
+
+\begin{figure}[H]
+\includegraphics[width=1\linewidth,]{report_files/figure-latex/Yuweiplot3-1} \caption{Comparisons of net exports}\label{fig:Yuweiplot3}
+\end{figure}
+
+When we compare the total trades between import and export trades of China, we could draw some conclusions:\\
+1.Though the trades of iron\_steel win a place in the top4 both in import and export trades of China,the export trades of iron\_steel are much larger than that of import trades. Imports are less than half of exports.\\
+2. Though the import trades of cars are higher than export trades these years, there is a good upward momentum in the tendency of export trades of cars. It might be predicted that the export trades of cars will be more than import cars trades sooner or later.\\
+3. The status of imported pharma trades are higher than that of export trades. And from 2016 to 2018 the amount of imports is getting higher year after year. It might be implied that China is somewhat dependent on imported medicine or medical instruments.
+
 \section*{United States of America}
 
 \section*{Conclusion}
