--- a/report.Rmd
+++ b/report.Rmd
@@ -393,5 +393,36 @@ From \@ref(fig:plot2) it has become obvious that USA is a more Import oriented e
 
 \section*{Conclusion}
 
+\section*{References}
 
+Alboukadel Kassambara (2020). ggpubr: 'ggplot2' Based Publication Ready Plots. R
+  package version 0.4.0. https://CRAN.R-project.org/package=ggpubr
+
+Data.un.org. 2021. UNdata | explorer. http://data.un.org/Explorer.aspx.
+
+Hao Zhu (2021). kableExtra: Construct Complex Table with 'kable' and Pipe Syntax. R
+  package version 1.3.4. https://CRAN.R-project.org/package=kableExtra
+
+H. Wickham. ggplot2: Elegant Graphics for Data Analysis. Springer-Verlag New York,
+  2016.
+
+Hadley Wickham and Jim Hester (2020). readr: Read Rectangular Text Data. R package
+  version 1.4.0. https://CRAN.R-project.org/package=readr
+
+Jeffrey B. Arnold (2021). ggthemes: Extra Themes, Scales and Geoms for 'ggplot2'. R
+  package version 4.2.4. https://CRAN.R-project.org/package=ggthemes
+
+ Original S code by Richard A. Becker, Allan R. Wilks. R version by Ray Brownrigg.
+  Enhancements by Thomas P Minka and Alex Deckmyn. (2018). maps: Draw Geographical
+  Maps. R package version 3.3.0. https://CRAN.R-project.org/package=maps
+  
+
+Wickham et al., (2019). Welcome to the tidyverse. Journal of Open Source Software,
+  4(43), 1686, https://doi.org/10.21105/joss.01686
+  
+Wto.org. 2021. WTO | Trade Statistics - World Trade Statistical Review 2019 https://www.wto.org/english/res_e/statis_e/wts2019_e/wts19_toc_e.htm.
+ 
+Yihui Xie (2020). bookdown: Authoring Books and Technical Documents with R Markdown. R
+  package version 0.21. 
+  
 
